[package]
edition = "2021"
name = "vanitygen-pk"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.4.0", features = ["derive"] }
fastrand = "2.0.0"
hex = "0.4.3"
libsecp256k1 = "0.7.1"
num_cpus = "1.16.0"
rand = "0.8.5"
regex = "1.9.3"
tiny-keccak = {version = "2.0.2", features = ['keccak']}
